# rpkgengine

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  build.go  build.sh  config.go  go.mod  go.sum  go.work.sum  main.go  rpkg.build.yaml  rpkgengine.go
.github/workflows/: go.yml
docker/export/: Dockerfile
rpkg-engine/: rpkgengine.go
rpkg-test/: rpkg.build.yaml
rpkg-test/Package/: README.md  pyproject.toml
rpkg-test/Package/src/test-package/: main.py  some.py
rpkgengine/: build.go  functions.go  globals.go  rpkengine_test.go  rpkgengine.go  types.go
rpkgengineconfig/: functions.go  rpkgengineconfig_test.go
