[project]
name = "rpkg-test"
version = "0.0.1"
authors = [
    { name="Rohan Date", email="rohan.s.date@icloud.com" },
]
description = "A test package for the rpkg package manager"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"